--- a/Concepts.csproj
+++ b/Concepts.csproj
@@ -9,9 +9,39 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="RestSharp" Version="110.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="ConceptTests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="ConceptTests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="ConceptTests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="ConceptTests\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="ConceptTests\obj\ConceptTests.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\obj\project.packagespec.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\appsettings.Development.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\appsettings.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\Concepts.deps.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\Concepts.runtimeconfig.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\ConceptTests.deps.json" />
+      <_ContentIncludedByDefault Remove="ConceptTests\bin\Debug\net7.0\ConceptTests.runtimeconfig.json" />
     </ItemGroup>
 
 </Project>
